Tests for Client Assigned Demands Conversation added Tests for Supplier Assigned Demands Conversation added Several tests, plus test DataSets were fixed MaxOffers limit extended to 50 in FormDemandAdvView.ui.xml